javascript TextObject added

--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,11 @@ div {
 <body>
 <div class='hidden big' >Big Text </div>
 
+<div>
+<video class='hidden' id="mos" src="Man of Steel - Official Nokia Exclusive Trailer [HD].mp4" > 
+</video>
+</div>
+ 
 
 	
 </body>
